fixing white space

--- a/css/sass/jumbotron.scss
+++ b/css/sass/jumbotron.scss
@@ -21,6 +21,7 @@
       font-weight: bold;
       text-transform: uppercase;
       top: $bar-spacing*2.35;
+      white-space: nowrap;
     }
     h1 {
       // text-shadow: -1px 1px #000, -2px 2px #BA2700, -3px 3px #BA2700;
